[package]
name = "s3lib"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.7", features = ["macros"] }
hex = "0.4.3"
hmac = "0.12.1"
serde-xml-rs = "0.8.2"
sha2 = "0.10.9"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.7", features = ["trace"] }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
