[package]
name = "bunny-s3"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.7", features = ["macros"] }
dotenvy = "0.15.7"
futures-util = "0.3.31"
hex = "0.4.3"
hmac = "0.12.1"
reqwest = { version = "0.12.24", features = ["stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-xml-rs = "0.8.2"
serde_json = "1.0.145"
sha2 = "0.10.9"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.7", features = ["trace"] }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
url_encor = "1.0.3"
